[project]
name = "feedly-mcp"
version = "0.1.0"
description = "MCP server for interacting with the Feedly Cloud API"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
]

[project.scripts]
feedly-mcp = "feedly_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["feedly_mcp*"]
